# TurPy

./: .coverage  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test-and-upload-to-pypi.yml
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  turpy.html
docs/augmentation/: eda.html  keyboard.html  turpy.augmentation.html
docs/models/: doc2vec.html  tfidf.html  transformer.html  turpy.models.html
docs/preprocess/: functions.html  spelling.html  text.html  turpy.preprocess.html
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  turpy.rst  tutorials.rst
docs/source/augmentation/: eda.rst  turpy.augmentation.rst
docs/source/models/: doc2vec.rst  transformer.rst
docs/source/preprocess/: text.rst  turpy.preprocess.rst
docs/visualization/: turpy.visualization.html  wordcloud.html
docsrc/: Makefile
docsrc/source/: conf.py  index.rst  installation.rst  quickstart.rst
docsrc/source/augmentation/: keyboard.rst
docsrc/source/models/: tfidf.rst  turpy.models.rst
docsrc/source/preprocess/: functions.rst  spelling.rst  turpy.preprocess.rst
docsrc/source/visualization/: turpy.visualization.rst  wordcloud.rst
examples/: classification.ipynb
examples/data/: tweets.csv
src/: .coverage
src/turpy/: _types.py  augmentation.py  base.py  deneme.py  preprocess.py  turpy.py
src/turpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/turpy/augmentation/: __init__.py  _eda_augmentator.py  _keyboard_augmentator.py  eda_augmentator.py  keyboard_augmentator.py
src/turpy/modelling/: _tfidf.py
src/turpy/models/: __init__.py  _deep.py  _doc2vec.py  _tfidf.py
src/turpy/preprocess/: __init__.py  _spelling_preprocessor.py  _text_preprocessor.py  spelling_preprocessor.py  text_preprocessor.py
src/turpy/preprocess/functions/: __init__.py  _preprocess_functions.py  _spelling_functions.py
src/turpy/resources/: qwerty_maps.json  stopwords.txt  word_count.txt
src/turpy/tests/: test_augmentation.py  test_models.py  test_preprocess.py  test_turpy.py
src/turpy/visualization/: __init__.py  _wordcloud.py
tests/: test_turpy.py
turpy/preprocess/: _base.py  _preprocess.py
