[tool.poetry]
name = "turpy"
version = "0.2.0"
description = "NLP tools for Turkish."
authors = ["Atilla Karaahmetoglu <atilla.karaahmetoglu@gmail.com>"]
maintainers = ["Atilla Karaahmetoglu <atilla.karaahmetoglu@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/atilla00/TurPy"
homepage = "https://github.com/atilla00/TurPy"
keywords = [
    "NLP",
    "Turkish"
]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.3.5"
scikit-learn = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
