[metadata]
name = turpy
description = A python library for Turkish natural language processing.
author = Atilla Karaahmetoğlu
version = 0.0.1
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    turpy
install_requires =
    pandas==1.3.5
    numpy==1.21.5
python_requires = >=3.7.1
package_dir =
    =src
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
turpy = py.typed

[flake8]
ignore = E226,E302,E41, E722
max-line-length = 160
