[metadata]
name = turpy
description = A python library for Turkish natural language processing.
author = Atilla Karaahmetoğlu
version = 0.0.1
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    turpy
install_requires =
    pandas >= 1.3.0
    numpy >= 1.21.0
    scikit-learn >= 1.0.0
    symspellpy >= 6.7.0
    tqdm >= 4.9.0
    NlpToolkit-MorphologicalAnalysis == 1.0.34
    NlpToolkit-WordNet >= 1.0.20
    nlpaug >= 1.1.0
    gensim >= 4.1.0
python_requires = >=3.7.1
package_dir =
    =src
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    types-setuptools>=57.4.8
deep =
    simpletransformers >= 0.63.0

[options.package_data]
turpy = py.typed

[flake8]
ignore = E226,E302,E41, E722
max-line-length = 160
per-file-ignores = __init__.py:F401
